@@ -1,8 +1,9 @@
 package com.algaworks.algafood.domain.service;
 
+import java.util.List;
+
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.dao.DataIntegrityViolationException;
-import org.springframework.dao.EmptyResultDataAccessException;
 import org.springframework.stereotype.Service;
 
 import com.algaworks.algafood.domain.exception.EntidadeEmUsoException;
@@ -16,20 +17,32 @@ public class CozinhaService {
 	@Autowired
 	private CozinhaRepository cozinhaRepository;
 	
+	public List<Cozinha> todas() {
+		return cozinhaRepository.findAll();
+	}
+	
+	
 	public Cozinha salvar(Cozinha cozinha) {
-		return cozinhaRepository.salvar(cozinha);
+		return cozinhaRepository.save(cozinha);
 	}
 	
 	public void remover(Long id) {
-		try {
-			cozinhaRepository.remover(id);
-		}catch (EmptyResultDataAccessException e) {
+		if (!cozinhaRepository.existsById(id)) {
 			throw new EntidadeNaoEncontradaException(
-					String.format("Não existe uma cozinha com o ID: %d", id));
+                    "Não existe uma cozinha com o ID: %d.".formatted(id));
 		}
-		catch (DataIntegrityViolationException e) {
+		
+		try {
+			cozinhaRepository.deleteById(id);	
+		} catch (DataIntegrityViolationException e) {
 			throw new EntidadeEmUsoException(
-					String.format("Cozinha de código %d não pode ser removida, pois está em uso",  id));
+                    "Cozinha de código %d não pode ser removida, pois está em uso.".formatted(id));
 		}
+		
+		
+//		catch (EmptyResultDataAccessException e) { NÃO E LANÇADA MAIS
+//			throw new EntidadeNaoEncontradaException(
+//                    "Não existe uma cozinha com o ID: %d.".formatted(id));
+//		}
 	}
 }
