@@ -1,6 +1,7 @@
 package com.algaworks.algafood.domain.service;
 
 import java.util.List;
+import java.util.Optional;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.dao.DataIntegrityViolationException;
@@ -20,28 +21,35 @@ public class EstadoService {
 	
 	
 	public List<Estado> todos(){
-		return estadoRepository.todos();
+		return estadoRepository.findAll();
 	}
 	
-	public Estado buscarPorId(Long id) {
-		return estadoRepository.buscarPorId(id);	
+	public Optional<Estado> buscarPorId(Long id) {
+		return estadoRepository.findById(id);	
 	}
 	
 	public Estado salvar(Estado estado) {
 
-		return estadoRepository.salvar(estado);
+		return estadoRepository.save(estado);
 	}
 	
 	public void remover(Long id) {
-		try {
-			estadoRepository.remover(id);
-		}catch (EmptyResultDataAccessException e) {
+		if(!estadoRepository.existsById(id))
 			throw new EntidadeNaoEncontradaException(
-					String.format("Não existe um estado com o ID: %d", id));
-		}
-		catch (DataIntegrityViolationException e) {
+                    "Não existe um estado com o ID: %d".formatted(id));
+			
+		try {
+			estadoRepository.deleteById(id);
+		} catch (DataIntegrityViolationException e) {
 			throw new EntidadeEmUsoException(
-					String.format("Estado de código %d não pode ser removida, pois está em uso",  id));
+                    "Estado de código %d não pode ser removida, pois está em uso".formatted(id));
 		}
 	}
+	
+	
+	/*
+	 * catch (EmptyResultDataAccessException e) { throw new
+	 * EntidadeNaoEncontradaException(
+	 * "Não existe um estado com o ID: %d".formatted(id)); }
+	 */
 }
